# server_forge

./: Cargo.toml  Dockerfile  README.md  index.html  install.sh
.github/workflows/: rust.yml
api/: crates.js  help.html  search-index.js  settings.html  src-files.js
api/search.desc/server_forge/: server_forge-desc-0-.js
api/server_forge/: all.html  index.html  sidebar-items.js
api/server_forge/backup/: fn.configure_backup_schedule.html  fn.install_backup_tools.html  fn.setup_backup_locations.html  fn.setup_backup_system.html  index.html  sidebar-items.js
api/server_forge/config/: index.html  struct.Config.html
api/server_forge/containerization/: fn.configure_docker.html  fn.configure_kubernetes.html  fn.deploy_container.html  fn.deploy_containers.html  fn.deploy_to_docker.html  fn.deploy_to_kubernetes.html  fn.install_docker.html  fn.install_kubernetes.html  fn.setup_docker.html  fn.setup_kubernetes.html  index.html  sidebar-items.js
api/server_forge/deployment/: fn.deploy_apache.html  fn.deploy_app.html  fn.deploy_applications.html  fn.deploy_mysql.html  (+9 more)
guide/: chapter_1.html  print.html  searchindex.js  searchindex.json
src/: backup.rs  config.rs  containerization.rs  deployment.rs  distro.rs  lib.rs  main.rs  monitoring.rs  rollback.rs  security.rs  setup.rs  updates.rs  utils.rs
tests/: backup_tests.rs  common.rs  config_tests.rs  containerization_tests.rs  deployment_tests.rs  distro_tests.rs  main.rs  mod.rs  monitoring_tests.rs  rollback_tests.rs  security_tests.rs  setup_tests.rs  updates_tests.rs  utils_test.rs
tests/common/: mod.rs
(+68 files in other folders)
