[package]
name = "serverforge"
version = "0.1.3"
edition = "2021"
authors = ["Chidozie C. Okafor <chidosiky2015@gmail.com>"]
description = "ServerForge - A robust server setup and maintenance tool"
license = "MIT"

[dependencies]
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
config = "0.14.0"
chrono = "0.4.38"
serde_json = "1.0.117"
log4rs = "1.3.0"
tempfile = "3.10.1"
rand = "0.8.5"
mockall = "0.12.1"

[lib]
name = "server_forge"
path = "src/lib.rs"

[[bin]]
name = "server_forge"
path = "src/main.rs"